fix: random NPE chores: clean code